syntax = "proto3"; //protocol buffer 3 language 

package packagePB;

message Cart { // MODEL: 3 propriedades, ordenados por 1,2,3,4,5
  string id = 1;
  string updatedAt = 2;
  string clientId = 3;
  bool status = 4;
  repeated string productListId = 5;
}

//mensagem que deve ser recebida
message CartIdRequest {
	string id = 1;
}

message CartRequest {
	Cart cart =1;
}

message GetAllCartRequest {
  repeated Cart cars = 1;
}

//mensagem que deve ser recebida
message CartResponse {
  Cart cart = 1;
}

message CartsResponse {
  repeated Cart cars = 1;
}

//metodos
service cartService {
  rpc GetAllCarts(GetAllCartRequest) returns (CartsResponse) ;
  rpc GetCart(CartIdRequest) returns (CartResponse);
  rpc UpdateProductList(CartIdRequest) returns (CartResponse);
  rpc UpdateStatus(CartIdRequest) returns (CartResponse);
  rpc CreateCart(CartIdRequest) returns (CartResponse);
  rpc DeleteCart(CartIdRequest) returns (CartResponse);
}